--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,4 @@
 @using System.Text.Json;
 @using Microsoft.AspNetCore.Components.Forms;
 @using PocAspNetCoreBlazorAntDesign.Services.CodeServce;
+@using Microsoft.AspNetCore.Authorization;
