--- a/App.razor
+++ b/App.razor
@@ -1,12 +1,17 @@
 ﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+			<NotAuthorized>
+				<RedirectToLogin />
+			</NotAuthorized>
+		</AuthorizeRouteView>
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <Result Status="404" />
-        </LayoutView>
+		<CascadingAuthenticationState>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <Result Status="404" />
+            </LayoutView>
+        </CascadingAuthenticationState>
     </NotFound>
 </Router>
 <AntContainer />
