--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,3 +10,5 @@
 @using Microsoft.AspNetCore.Components.Forms;
 @using PocAspNetCoreBlazorAntDesign.Services.CodeServce;
 @using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
